--- a/relay.config.json
+++ b/relay.config.json
@@ -3,5 +3,9 @@
   "language": "typescript",
   "schema": "./schema.graphql",
   "exclude": ["**/node_modules/**", "**/__mocks__/**", "**/__generated__/**"],
-  "eagerEsModules": true
+  "eagerEsModules": true,
+  "schemaConfig": {
+    "nodeInterfaceIdField": "nodeId",
+    "nodeInterfaceIdVariableName": "nodeId"
+  }
 }
