fix .env.example for this project

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=s0m3PAssw0rd
 
 # For Postgraphile
-DATABASE_URL=postgres://postgres:s0m3PAssw0rd@db:5432/organizational-app
+DATABASE_URL=postgres://postgres:s0m3PAssw0rd@db:5432/streaming-overlay
 GRAPHQL_PORT=5433
 
 # For 
