--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "dev:relay": "relay-compiler --watch"
   },
   "dependencies": {
-    "fp-ts": "^2.16.0",
+    "dompurify": "^3.0.5",
+    "effect": "^2.0.0-next.13",
     "graphql": "^16.7.1",
+    "marked": "^5.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-relay": "^15.0.0",
