--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,8 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=s0m3PAssw0rd
 
 # For Postgraphile
-DATABASE_URL=postgres://postgres:s0m3PAssw0rd@db:5432/streaming-overlay
-GRAPHQL_PORT=5433
+DATABASE_URL=postgres://postgres:s0m3PAssw0rd@streamingdb:6432/streaming-overlay
+GRAPHQL_PORT=6433
 
 # For 
-ENDPOINT_URL=http://localhost:5433/graphql
+ENDPOINT_URL=http://localhost:6433/graphql
