--- a/graphql/src/package.json
+++ b/graphql/src/package.json
@@ -10,6 +10,7 @@
     "postgraphile"
   ],
   "dependencies": {
+    "@graphile/pg-pubsub": "^4.13.0",
     "@graphile-contrib/pg-simplify-inflector": "^6.1.0",
     "postgraphile": "^4.13.0",
     "postgraphile-plugin-connection-filter": "^2.3.0",
